# CircuitPython_RFID-RC522

./: LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  rfid-rc522.py
.github/workflows/: release_gh.yml
examples/: rfid-rc522_simpletest.py
